--- a/css/main.css
+++ b/css/main.css
@@ -58,9 +58,44 @@ header nav a:hover {
 }
 
 .anime-principal .descricao{
+    margin-top: 10px;
     margin-bottom: 40px;
 }
 
 .titulo {
+    margin-top: 15px;
     font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.botao {
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+}
+
+.botao:hover{
+    background: white;
+    color: black;
+}
+
+.botao i {
+    margin-right: 5px;
+}
+
+.box-anime{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.carrosel-animes{
+    margin-top: 5px;
 }
